<resources>
    <string name="app_name">Discoop</string>
    <string name="title_activity_main">Discoop</string>

    <string name="search_hint">Search discount type, address, details, expiration date...</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="notDeted">Unable to Get Location</string>
    <string name="settings">Settings</string>

    <string name="textwarn">Permission Mandatory for this App</string>

    <string name="action_about">About Discoop</string>
    <string name="title_activity_search">Search Discounts</string>
    <string name="title_activity_submit">Submit a Discount</string>
    <string name="title_activity_maps">Map</string>

    <string name="checkbox_bar_name">Restaurant/Bar</string>
    <string name="checkbox_retail_name">Retail</string>
    <string name="checkbox_other_name">Other</string>

    <string name="submit_button">Submit</string>

    <string name="submit_discount_type">Select Type</string>
    <string name="submit_discount_details">Enter Details</string>
    <string name="submit_discount_details_hint">Enter discount details</string>
    <string name="submit_discount_location">Enter Location</string>
    <string name="submit_discount_location_hint">Enter street name and number</string>
    <string name="submit_discount_state_location_hint">Enter state</string>
    <string name="submit_discount_expiration">Enter Expiration Date</string>
    <string name="submit_discount_expiration_hint">Enter discount expiration date</string>
    <string name="title_activity_about_discoop">AboutDiscoop</string>

    <string name="about_discoop_header">About Discoop</string>
    <string name="about_discoop_paragraph">Discoop is an application meant to help you save time and money by locating discounts nearby establishments such as retail stores, restaurants, and bars.
      \n \n Our information about discounts is supported by user-submissions. We highly encourage our users to submit any discounts that they encounter using our simple submission page.
       \n \n Discoop was developed by Crissy Leach and Sam Kanner and advised by Professor Charles Wiseman at Wentworth Intitute of Technology Department for Computer Science and Networking.
    </string>

    <string name="action_settings">Settings</string>

</resources>
