<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wit.edu.leachc1.discoop.submit"
    tools:showIn="@layout/app_bar_submit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_discount_type"
            android:textSize="17dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>
        <CheckBox
            android:id="@+id/checkbox_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/checkbox_bar_name" />

        <CheckBox
            android:id="@+id/checkbox_retail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onCheckboxClicked"
            android:text="@string/checkbox_retail_name" />

        <CheckBox
            android:id="@+id/checkbox_other"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:onClick="onCheckboxClicked"
            android:text="@string/checkbox_other_name" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit_discount_location"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/submit_discount_location_hint"
            android:inputType="textPostalAddress"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit_discount_details"
            android:textSize="17dp" />

        <android.support.design.widget.TextInputEditText
            android:id="@+id/textInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:hint="@string/submit_discount_details_hint"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/submit_discount_expiration"
            android:textSize="17dp" />

        <EditText
            android:id="@+id/editText3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/submit_discount_expiration_hint"
            android:inputType="date"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit_button"
                    android:layout_gravity="bottom|right"
                    android:onClick="toastSubmit"/>

                <ImageButton
                    android:id="@+id/btnReturn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="?attr/homeAsUpIndicator"
                    android:layout_gravity="bottom|left"
                    android:onClick="returnBtn"/>
        </FrameLayout>

</android.support.constraint.ConstraintLayout>
